--- a/configs/alacritty/alacritty.toml
+++ b/configs/alacritty/alacritty.toml
@@ -4,13 +4,15 @@ startup_mode = "Maximized"
 
 decorations = "None"
 
-opacity = 0.95
+opacity = 1
 
 padding = { x = 5, y = 5 }
 
 dynamic_title = false
 
 [font]
+
+normal = { family = "JetBrainsMono Nerd Font" }
 
 size = 9
 
