make it more raw

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -31,7 +31,7 @@ set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g allow-rename off
 
-set -g status-bg "#1f1f28"
+set -g status-bg "#171717"
 set -g status-fg "#FFFFFF"
 set -g status-position bottom
 set -g status-justify centre
