--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -26,12 +26,16 @@ setw -g monitor-activity off
 set -g bell-action none
 set -g mode-style "fg=#000000,bg=#FFFFFF"
 
-set -g default-terminal "xterm-256color"
-
+set -g default-terminal "tmux-256color"
+set-option -g focus-events on
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -a terminal-features 'alacritty:RGB'
+
+set-window-option -q -g utf8 on
+
 set-option -g allow-rename off
 
-set -g status-bg "#181818"
+set -g status-bg "#262626"
 set -g status-fg "#FFFFFF"
 set -g status-position bottom
 set -g status-justify centre
