--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -1,3 +1,4 @@
+set -sg repeat-time 0
 set -s escape-time 0 # faster command sequences
 
 set -g status-interval 5
@@ -31,11 +32,11 @@ set-option -g focus-events on
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -a terminal-features 'alacritty:RGB'
 
-set-window-option -q -g utf8 on
-
 set-option -g allow-rename off
 
-set -g status-bg "#262626"
+set-window-option -q -g utf8 on
+
+set -g status-bg "#000000"
 set -g status-fg "#FFFFFF"
 set -g status-position bottom
 set -g status-justify centre
