--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -27,10 +27,10 @@ setw -g monitor-activity off
 set -g bell-action none
 set -g mode-style "fg=#000000,bg=#FFFFFF"
 
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 set-option -g focus-events on
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set-option -a terminal-features 'alacritty:RGB'
+#set-option -ga terminal-overrides ",xterm-256color:Tc"
+#set-option -a terminal-features 'alacritty:RGB'
 
 set-option -g allow-rename off
 
