--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -15,6 +15,7 @@ bind -r L select-window -l
 
 bind r source-file ~/.tmux.conf
 
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 unbind c
 bind N new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
@@ -29,15 +30,13 @@ set -g mode-style "fg=#000000,bg=#FFFFFF"
 
 set -g default-terminal "screen-256color"
 set-option -g focus-events on
-#set-option -ga terminal-overrides ",xterm-256color:Tc"
-#set-option -a terminal-features 'alacritty:RGB'
 
 set-option -g allow-rename off
 
 set-window-option -q -g utf8 on
 
-set -g status-bg "#000000"
-set -g status-fg "#FFFFFF"
+set -g status-bg "#212121"
+set -g status-fg "#F2F3F5"
 set -g status-position bottom
 set -g status-justify centre
 
