--- a/configs/alacritty/alacritty.toml
+++ b/configs/alacritty/alacritty.toml
@@ -4,7 +4,7 @@ startup_mode = "Maximized"
 
 decorations = "None"
 
-#opacity = 0.9
+opacity = 0.9
 
 padding = { x = 0, y = 0 }
 
@@ -21,4 +21,4 @@ hide_when_typing = true
 
 [colors]
 [colors.primary]
-background = '#000000'
+background = '#212121'
