fix alacritty and tmux

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -26,7 +26,7 @@ set -g visual-bell off
 set -g visual-silence off
 setw -g monitor-activity off
 set -g bell-action none
-set -g mode-style "fg=#000000,bg=#FFFFFF"
+set -g mode-style "fg=#000000,bg=#8a451a"
 
 set -g default-terminal "screen-256color"
 set-option -g focus-events on
@@ -35,8 +35,8 @@ set-option -g allow-rename off
 
 set-window-option -q -g utf8 on
 
-set -g status-bg "#212121"
-set -g status-fg "#F2F3F5"
+set -g status-bg "#000000"
+set -g status-fg "#E6EFFF"
 set -g status-position bottom
 set -g status-justify centre
 
