update tmux colors

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -35,8 +35,8 @@ set-option -g allow-rename off
 
 set-window-option -q -g utf8 on
 
-set -g status-bg "#000000"
-set -g status-fg "#E6EFFF"
+set -g status-bg "#15141b"
+set -g status-fg "#FFFFFF"
 set -g status-position bottom
 set -g status-justify centre
 
