--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -1,11 +1,56 @@
 set -sg repeat-time 0
 set -s escape-time 0 # faster command sequences
-
 set -g status-interval 5
-
 set -g mode-keys vi
 
-set -g mouse off
+set-option -g focus-events on
+set-option -g allow-rename off
+
+set-window-option -q -g utf8 on
+
+# Improve terminal colors
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
+
+# Increase scrollback buffer to 10000
+set -g history-limit 10000
+
+# Mouse mode
+set -g mouse on
+
+# Silence
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+
+# Status Bar
+set -g status-bg "#343F44"
+set -g status-fg white
+
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'bg=colour18 fg=white'
+set -g status-left ''
+set -g status-right '#[fg=#3D484D,bg=#343F44]#[fg=white,bg=#3D484D] %d/%m #[fg=#83C092,bg=#3D484D]#[fg=#2D353B,bg=#83C092] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-style 'fg=#3D484D bg=#A7C080 bold'
+setw -g window-status-current-format ' #I#[fg=#475258]:#[fg=#3D484D]#W#[fg=#56635f]#F #[fg=#A7C080,bg=#343F44]'
+
+setw -g window-status-style 'fg=white bg=#475258'
+setw -g window-status-format ' #I#[fg=white]:#[fg=white]#W#[fg=white]#F '
+
+# Bindings
+
+unbind c
+bind r source-file ~/.tmux.conf
+bind-key K run-shell "/home/dev/fix-keyboard"
+bind N new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 bind -r h select-pane -L
 bind -r j select-pane -D
@@ -13,35 +58,4 @@ bind -r k select-pane -U
 bind -r l select-pane -R
 bind -r L select-window -l
 
-bind r source-file ~/.tmux.conf
-
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-unbind c
-bind N new-window -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-
-set -g visual-activity off
-set -g visual-bell off
-set -g visual-silence off
-setw -g monitor-activity off
-set -g bell-action none
-set -g mode-style "fg=#000000,bg=#8a451a"
-
-set -g default-terminal "screen-256color"
-set-option -g focus-events on
-
-set-option -g allow-rename off
-
-set-window-option -q -g utf8 on
-
-set -g status-bg "#15141b"
-set -g status-fg "#FFFFFF"
-set -g status-position bottom
-set -g status-justify centre
-
-set -g status-right ""
-set -g status-left ""
-
 bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard'
-
